--- a/CHATOPIA/Views/RoomListView.xaml
+++ b/CHATOPIA/Views/RoomListView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CHATOPIA.ViewModels.RoomListView"
+﻿<UserControl x:Class="CHATOPIA.Views.RoomListView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
