--- a/CHATOPIA/Views/MessageEntryView.xaml
+++ b/CHATOPIA/Views/MessageEntryView.xaml
@@ -5,7 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
+	<Grid>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="1*" />
+			<ColumnDefinition Width="Auto" />
+		</Grid.ColumnDefinitions>
+		
+		
+		<TextBox Text="{Binding Message, Mode=TwoWay}" />
+		
+		<!-- If the x:Name of our control matches an action on the view model, Caliburn Micro will link the two together.  This is a convention. -->
+		<Button x:Name="Send" Content="Send" Grid.Column="1" />
+	</Grid>
 </UserControl>
