--- a/CHATOPIA/Views/ShellView.xaml
+++ b/CHATOPIA/Views/ShellView.xaml
@@ -2,7 +2,28 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Window1" Height="300" Width="300">
-    <Grid>
-        
-    </Grid>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+
+		<!-- a width or height with {number}* means to use a % of the width of the parent container to specify the actual width of the control. -->
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="5*"/>
+			<ColumnDefinition Width="1*" />
+		</Grid.ColumnDefinitions>
+		
+		<!--
+		In order to compose the three controls that we wrote, we need a placeholder on screen for each control, and a basic shell layout 
+		so that the controls are where we need them to be.
+		-->
+		
+		<!-- Message Stream -->
+		<ContentControl x:Name="MessageStream" />
+		<!-- Room Member List -->
+		<ContentControl x:Name="RoomList" Grid.Row="0" Grid.Column="1" />
+		<!-- Message Entry -->
+		<ContentControl x:Name="MessageEntry" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" MinHeight="30" />
+	</Grid>
 </Window>
